--- a/src/install-upgrade-kernel-ext-usb-gtk.ui
+++ b/src/install-upgrade-kernel-ext-usb-gtk.ui
@@ -597,7 +597,15 @@ Use it only for installations on external ssd or usb stick</property>
                   </packing>
                 </child>
                 <child>
-                  <placeholder/>
+                  <object class="GtkProgressBar" id="progressbar">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">False</property>
+                    <property name="position">9</property>
+                  </packing>
                 </child>
               </object>
               <packing>
