--- a/src/install-upgrade-kernel-ext-usb-gtk.ui
+++ b/src/install-upgrade-kernel-ext-usb-gtk.ui
@@ -631,7 +631,7 @@ Use it only for installations on external ssd or usb stick</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">mainwindow</property>
     <property name="program_name">install-upgrade-kernel-ext-usb</property>
-    <property name="copyright" translatable="yes">Copyright © 2022  Dimitris Tzemos</property>
+    <property name="copyright">Copyright © 2022  Dimitris Tzemos</property>
     <property name="license">         GNU GENERAL PUBLIC LICENSE
                        Version 3, 29 June 2007
 
