--- a/src/install-upgrade-kernel-ext-usb-gtk.ui
+++ b/src/install-upgrade-kernel-ext-usb-gtk.ui
@@ -1434,7 +1434,7 @@ Public License instead of this License.  But first, please read
     <property name="title" translatable="yes">error!</property>
     <property name="resizable">False</property>
     <property name="window-position">center-on-parent</property>
-    <property name="type-hint">dialog</property>
+    <property name="type-hint">normal</property>
     <property name="transient-for">mainwindow</property>
     <signal name="delete-event" handler="gtk_widget_hide" swapped="no"/>
     <signal name="response" handler="gtk_widget_hide" swapped="no"/>
@@ -1515,7 +1515,7 @@ Public License instead of this License.  But first, please read
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Operation completed.</property>
     <property name="window-position">center-on-parent</property>
-    <property name="type-hint">dialog</property>
+    <property name="type-hint">normal</property>
     <property name="transient-for">mainwindow</property>
     <signal name="delete-event" handler="gtk_widget_hide" swapped="no"/>
     <signal name="response" handler="gtk_widget_hide" swapped="no"/>
